--- a/config/ctf.yml
+++ b/config/ctf.yml
@@ -8,7 +8,7 @@ application:
     showOnFirstStart: false
 challenges:
   showHints: false
-  safetyOverride: true
+  safetyOverride: false
 hackingInstructor:
   isEnabled: false
 ctf:
